fix layer control alignment

--- a/client/css/main.css
+++ b/client/css/main.css
@@ -30,7 +30,7 @@
     width: 280px;
 }
 .canvas-controls {
-    margin-right: 20px;
+    margin-right: 24px;
 }
 .right-controls {
     width: 160px;
